United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7159381 [macosx] Dock Icon defaults to Generic Java Application
7159381 : [macosx] Dock Icon defaults to Generic Java Application

Details
Type:
Bug
Submit Date:
2012-04-05
Status:
Resolved
Updated Date:
2013-04-16
Project Name:
JDK
Resolved Date:
2012-09-05
Component:
client-libs
OS:
os_x
Sub-Component:
java.awt
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
8

Related Reports
Backport:

Sub Tasks

Description
FULL PRODUCT VERSION :
java version "1.7.0_04-ea"
Java(TM) SE Runtime Environment (build 1.7.0_04-ea-b18)
Java HotSpot(TM) 64-Bit Server VM (build 23.0-b19, mixed mode)


ADDITIONAL OS VERSION INFORMATION :
Darwin 11.3.0 Darwin Kernel Version 11.3.0: Thu Jan 12 18:47:41 PST 2012; root:xnu-1699.24.23~1/RELEASE_X86_64 x86_64

A DESCRIPTION OF THE PROBLEM :
When running certain applications, such as Oracle SQL Developer or SQLuirrel SQL Client the dock icon changes from the one set by the application to a Generic Java Icon.

The applications behave properly under Java 1.6

REGRESSION.  Last worked in version 6u31

STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Run Mac OSX 10.7
Install JDK 7u4
Install Oracle SQL Developer
Launch the application
note the Dock Icon

EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
The application's respective Dock Icon
ACTUAL -
A generic Java Dock Icon

REPRODUCIBILITY :
This bug can be reproduced always.

                                    

Comments
EVALUATION

Note: I had to modify the sqldeveloper-Darwin.conf file to point it to a proper JDK image.

The application is starting with the correct dock icon, however later it gets overridden. Also note that the Apple menu bar states that the app's name is "Launcher", while when running with Apple JDK the name is displaed correctly.

It looks like this is a Launcher bug in Oracle JDK on the Mac, thus I'm reassigning this issue to ###@###.### for further evaluation.
                                     
2012-04-06



Hardware and Software, Engineered to Work Together