7159381: [macosx] Dock Icon defaults to Generic Java Application Category Reviewed-by: skovatch, art