src/macosx/native/sun/osxapp/NSApplicationAWT.m
@@ -51,7 +51,6 @@ BOOL postEventDuringEventSynthesis = NO;
 
 AWT_ASSERT_APPKIT_THREAD;
     fApplicationName = nil;
-    fUseDefaultIcon = NO;
     dummyEventTimestamp = 0.0;
     seenDummyEventLock = nil;
 
@@ -148,10 +147,6 @@ AWT_ASSERT_APPKIT_THREAD;
     if (appName != NULL) {
         fApplicationName = [NSString stringWithUTF8String:appName];
         unsetenv(envVar);
-
-        // If this environment variable was set we were launched from the command line, so we
-        // should use a generic app icon if one wasn't set.
-        fUseDefaultIcon = YES;
     }
 
     // If it wasn't specified as an argument, see if it was specified as a system property.
@@ -173,9 +168,6 @@ AWT_ASSERT_APPKIT_THREAD;
             if (lastPeriod.location != NSNotFound) {
                 fApplicationName = [fApplicationName substringFromIndex:lastPeriod.location + 1];
             }
-            // If this environment variable was set we were launched from the command line, so we
-            // should use a generic app icon if one wasn't set.
-            fUseDefaultIcon = YES;
         }
     }
 
@@ -268,7 +260,7 @@ AWT_ASSERT_APPKIT_THREAD;
     // If the icon file wasn't specified as an argument and we need to get an icon
     // we'll use the generic java app icon.
     NSString *defaultIconPath = [NSString stringWithFormat:@"%@%@", SHARED_FRAMEWORK_BUNDLE, @"/Resources/GenericApp.icns"];
-    if (fUseDefaultIcon && (theIconPath == nil)) {
+    if (([NSApp applicationIconImage] == nil) && (theIconPath == nil)) {
         theIconPath = defaultIconPath;
     }
 
